[package]
name = "web-to-json"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
scraper = "0.15"
open = "5.3.1"
regex = "1"
url = "2.3.0"
sanitize-filename = "0.6.0"